@@ -95,6 +95,7 @@ Change: Locate Theorem MNEM earlier, with new proof
 Change: Locate Definition UTM and Definition LTM earlier
 Change: Locate Theorem PTMT in Section MM
 Change: Locate Theorem ITMT in Section MINM
+Change: Reorganize proof of Theorem EDELI using induction
 Sage: doctesting, version 9.2
 Typo: Exercise SSLE.C53, add second condition to quoted problem (Jaime Ruiz)
 Typo: Theorem PSPHS, stray addition sign in the proof (Rachel Chaiser)
